# STARC

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
evaluation/: flash_attn_monkey_patch.py  llama.py  mistral.py  starc_attention.py
evaluation/LongBench/: eval.py  pred.py  ruler_eval.py
evaluation/LongBench/config/: model2maxlen.json  model2path.json
evaluation/pg19/: ppl_eval.py
scripts/: RULER.sh  longbench.sh  ppl_eval.sh
simulator_starc/: kv_budget_GPT_STARC.txt  kv_budget_GPT_SparQ.txt  kv_budget_Llama_STARC.txt  kv_budget_Llama_SparQ.txt  kv_budget_Mistral_Quest.txt  kv_budget_Mistral_STARC.txt  kv_budget_Mistral_SparQ.txt  main.py  set_pim_ramulator.sh
simulator_starc/pim_ramulator_src/trace_gen/: gen_trace_attacc_bank.py
simulator_starc/src/: config.py  devices.py  ramulator_wrapper.py  system.py
