[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starc"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "numpy==1.26.0",
  "pandas==2.2.3",
  "scipy==1.11.3",
  "tqdm==4.66.1",
  "pyyaml==6.0.2",
  "protobuf==3.20.3",
  "requests==2.32.3",
  "torch==2.1.2",
  "transformers==4.45.2",
  "accelerate==1.0.1",
  "datasets==2.14.5",
  "evaluate==0.4.0",
  "huggingface-hub==0.30.2",
  "tokenizers==0.20.3",
  "safetensors==0.5.3",
  "sentencepiece==0.1.99",
  "lm-eval==0.3.0",
  "rouge==1.0.1",
  "rouge-score==0.1.2",
  "sacrebleu==1.5.0",
  "nltk==3.9.1",
  "jieba==0.42.1",
  "fuzzywuzzy==0.18.0",
  "matplotlib==3.10.1",
  "tiktoken==0.9.0",
  "zstandard==0.21.0",
  "fastapi==0.104.1",
  "uvicorn==0.34.0",
  "gradio==4.44.1",
  "gradio-client==1.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
